# redis-agent-memory-with-langgraph-demo

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.backend  Dockerfile.frontend  README.md  demo.py  docker-compose.yml  pyproject.toml
backend/: app.py  memory.py
frontend/: app.js  index.html  styles.css
tests/: conftest.py  test_api.py  test_service.py  test_utils.py
