[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-memory-server-demo"
version = "0.1.0"
description = "LangGraph demo for Redis Agent Memory."
requires-python = ">=3.10"
dependencies = [
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langgraph>=0.2.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.1",
    "redis-agent-memory==0.0.2",
    "rich>=13.7.1",
]

[project.scripts]
redis-memory-langgraph-demo = "demo:main"

[tool.setuptools]
py-modules = ["demo"]
